# Trip_Organizer_master_newVersion

./: CMakeLists.txt  main.c
logic/functions/: functions.c
logic/menu/: menu.c
logic/utils/: utils.c  utils.h
model/destination/: destination.c
model/list/: list.c
